--- a/docs/guides/01.InstallingEOSFactory.md
+++ b/docs/guides/01.InstallingEOSFactory.md
@@ -1,34 +1,23 @@
 # Installing *EOSFactory*
 
-*EOSFactory* is a truly cross-platform tool. The purpose of this tutorial is to demonstrate how to install it on any operating system, including Windows, Mac and Linux.?
+*EOSFactory* is a truly cross-platform tool. The purpose of this tutorial is to demonstrate how to install it on any operating system, including Windows, OSX and Linux.
 
 ## Prerequisites
 
 * If you're on Windows 10, we assume that you have *Windows Subsystem for Linux* installed. If that's not the case, please refer to [this guide](https://docs.microsoft.com/en-us/windows/wsl/install-win10).
-* We also assume that you have successfully installed *EOSIO*. If that's not the case, please refer to [this guide](https://github.com/EOSIO/eos/wiki/Local-Environment). Note: if you are on Windows, the only option you have is to install *EOSIO* in the Linux bash, as EOS source code is not compatible with Windows.
-* Finally, *EOSFactory* works perfectly with *Visual Studio Code*. To install it, please refer to [this webpage](https://code.visualstudio.com/download).
+* We also assume that you have successfully installed *EOSIO*. If that's not the case, please refer to [this guide](https://github.com/EOSIO/eos/wiki/Local-Environment). **NOTE:** if you are on Windows, the only option you have is to install *EOSIO* in the Ubuntu bash (supplied by *Windows Subsystem for Linux*), as EOS source code is not compatible with Windows.
 
 ## Get the source code
 
-Clone *EOSFactory* source code from our repository:
+Clone *EOSFactory* source code from the repository:
 
 ```
 git clone https://github.com/tokenika/eosfactory.git
 ```
 
-## Set up Visual Studio Code (VSC)
+## Build *EOSFactory* on Linux & OSX
 
-Run VSC and open the `eosfactory` folder.
-
-In you are on Windows, navigate to `Preferences -> Settings` and overwrite the default configuration for the `terminal.integrated.shell.windows` option:
-
-```
-"terminal.integrated.shell.windows": "C:\\Windows\\sysnative\\bash.exe"
-```
-
-## Build *EOSFactory* on Linux
-
-Still in VSC, open the bash terminal and define an environment variable called `EOSIO_SOURCE_DIR`:
+Open the bash terminal and define an environment variable called `EOSIO_SOURCE_DIR`:
 
 ```
 echo 'export EOSIO_SOURCE_DIR=/path/to/your/local/EOSIO/repository' >> ~/.bashrc
@@ -53,11 +42,13 @@ cd eosfactory
 sudo ./build.sh
 ```
 
-**NOTE:** When the build process is finished you'll need to restart your VSC bash terminal.
+**NOTE:** When the build process is finished you'll need to restart your bash terminal.
 
 ## Build *EOSFactory* on Windows
 
-Still in VSC, open the bash terminal and define an environment variable called `EOSIO_SOURCE_DIR`:
+Open an Ubuntu bash terminal supplied by *Windows Subsystem for Linux.*
+
+In the bash terminal define an environment variable called `EOSIO_SOURCE_DIR`:
 
 ```
 echo 'export EOSIO_SOURCE_DIR=/path/to/your/local/EOSIO/repository' >> ~/.bashrc
@@ -75,7 +66,7 @@ Apply the above change to your bash console:
 source ~/.bashrc
 ```
 
-Next, still in the VSC bash terminal run this command to define a Windows user variable pointing to your Ubuntu home directory as seen from the Windows file system perspective:
+Next, still in the bash terminal run this command to define a Windows user variable pointing to your Ubuntu home directory as seen from the Windows file system perspective:
 
 ```
 setx.exe "HOME" "path\\to\\your\\ubuntu\\home\\directory"
@@ -95,7 +86,7 @@ setx.exe "HOME" %LocalAppData%\\Packages\\CanonicalGroupLimited.UbuntuonWindows_
 
 **NOTE:** If you are unsure what the path is in your case, open *Windows Explorer* and navigate to the  `%LocalAppData%\Packages` folder and search for `rootfs`.
 
-Restart your VSC for the change to take effect and check if the variable `HOME` has been properly set by running this command in the VSC bash terminal:
+Restart your bash terminal for the change to take effect and check if the variable `HOME` has been properly set by running this command in the bash terminal:
 
 ```
 echo $(cmd.exe /c dir %HOME%)
@@ -114,12 +105,13 @@ cd eosfactory
 ./build.sh
 ```
 
-**NOTE:** When the build process is finished you'll need to restart VSC.
+**NOTE:** When the build process is finished you'll need to restart your bash terminal.
 
 ## Test *EOSFactory*
 
-Verify that *EOSFactory* works and is properly hooked up to *EOSIO* by a simple unit-test:
+In the bash terminal, let's verify that *EOSFactory* works and is properly hooked up to *EOSIO*. You can do it by running a simple unit-test:
 
 ```
+cd eosfactory
 python3 ./tests/test1.py
 ```
