--- a/docs/guides/02.InteractingWithEOSContractsInEOSFactory.md
+++ b/docs/guides/02.InteractingWithEOSContractsInEOSFactory.md
@@ -4,15 +4,23 @@ The purpose of this tutorial is to demonstrate how *EOSFactory* and its Python C
 
 ## Prerequisites
 
-This tutorial assumes that you have successfully installed *EOSFactory*. If it's not the case, please refer to [this guide](InstallingEOSFactory.md).
+* This tutorial assumes that you have successfully installed *EOSFactory*. If it's not the case, please refer to [this guide](01.InstallingEOSFactory.html).
+* We also assume that you are familiar with the official [EOS tutorials](https://github.com/EOSIO/eos/wiki/Tutorial-Getting-Started-With-Contracts), as they will give you a broader context and explain the rationale behind EOS smart-contracts.
+* Finally, *EOSFactory* works perfectly with *Visual Studio Code*. To install it, please refer to [this webpage](https://code.visualstudio.com/download).
 
-We also assume that you are familiar with the official [EOS tutorials](https://github.com/EOSIO/eos/wiki/Tutorial-Getting-Started-With-Contracts), as they will give you a broader context and explain the rationale behind EOS smart-contracts.
+## Set up *Visual Studio Code* (VSC)
 
-Once you have a good grasp how standard EOS tools like `cleos` and `eosiocpp` work, you'll be able to appreciate how quickly similar tasks can be performed with *EOSFactory*, thus speeding up the smart-contract development cycle.
+Start *Visual Studio Code* (VSC) and inside VSC open the `eosfactory` folder.
 
-## Run Python CLI
+In you are on Windows, navigate to `Preferences -> Settings` and overwrite the default configuration for the `terminal.integrated.shell.windows` option:
 
-In *Visual Studio Code*, switch to the Bash console and type `python3` to run the Python CLI. The prompt should change to `>>>` signifying that it's ready for Python commands.
+```
+"terminal.integrated.shell.windows": "C:\\Windows\\sysnative\\bash.exe"
+```
+
+## Run Python CLI in VSC
+
+In *Visual Studio Code*, switch to the bash console and type `python3` to run the Python CLI. The prompt should change to `>>>` signifying that it's ready for Python commands.
 
 Next, import the *EOSFactory* toolset:
 
