--- a/docs/guides/03.CompilingEOSContractsInEOSFactory.md
+++ b/docs/guides/03.CompilingEOSContractsInEOSFactory.md
@@ -4,11 +4,9 @@ The purpose of this tutorial is to demonstrate how *EOSFactory* and its Python C
 
 ## Prerequisites
 
-This tutorial assumes that you have successfully installed *EOSFactory*. If it's not the case, please refer to [this guide](InstallingEOSFactory.md).
-
-We also assume that you are familiar with the material covered in [Getting Started with EOS Contracts in *EOSFactory*](GettingStartedwithEOSContractsinEOSFactory.md).
-
-Finally, we assume that you are familiar with the official [EOS Hello World tutorial](https://github.com/EOSIO/eos/wiki/Tutorial-Hello-World-Contract), as it presents the default way to compile and deploy smart-contracts in EOS. What we present here is an alternative.
+* This tutorial assumes that you have successfully installed *EOSFactory*. If it's not the case, please refer to [this guide](01.InstallingEOSFactory.html).
+* We also assume that you are familiar with the material covered in [Getting Started with EOS Contracts in *EOSFactory*](02.GettingStartedwithEOSContractsinEOSFactory.html).
+* Finally, we assume that you are familiar with the official [EOS Hello World tutorial](https://github.com/EOSIO/eos/wiki/Tutorial-Hello-World-Contract), as it presents the default way to compile and deploy smart-contracts in EOS. What we present here is an alternative.
 
 ## Set up the Workspace
 
