--- a/docs/guides/01.InstallingEOSFactory.md
+++ b/docs/guides/01.InstallingEOSFactory.md
@@ -1,11 +1,11 @@
 # Installing *EOSFactory*
 
-*EOSFactory* is a truly cross-platform tool. The purpose of this tutorial is to demonstrate how to install it on any operating system, including Windows, OSX and Linux.
+The purpose of this tutorial is to demonstrate how to install *EOSFactory* on any operating system, including Windows, OSX and Linux.
 
 ## Prerequisites
 
 * If you're on Windows 10, we assume that you have *Windows Subsystem for Linux* installed. If that's not the case, please refer to [this guide](https://docs.microsoft.com/en-us/windows/wsl/install-win10).
-* We also assume that you have successfully installed *EOSIO*. If that's not the case, please refer to [this guide](https://github.com/EOSIO/eos/wiki/Local-Environment). **NOTE:** if you are on Windows, the only option you have is to install *EOSIO* in the Ubuntu bash (supplied by *Windows Subsystem for Linux*), as EOS source code is not compatible with Windows.
+* We also assume that you have successfully installed *EOSIO* on your machine. If that's not the case, please refer to [this guide](https://github.com/EOSIO/eos/wiki/Local-Environment). If you are on Windows 10, the only option you have is installing *EOSIO* in the Ubuntu bash (supplied by *Windows Subsystem for Linux*), as it cannot be compiled directly on a Windows machine. What we recommend is clone the *EOSIO* source code in Windows, but build it in the Ubuntu bash, taking advantage of the fact that the entire Windows file structure is fully accessible in the Ubuntu bash.
 
 ## Get the source code
 
@@ -23,13 +23,13 @@ Open the bash terminal and define an environment variable called `EOSIO_SOURCE_D
 echo 'export EOSIO_SOURCE_DIR=/path/to/your/local/EOSIO/repository' >> ~/.bashrc
 ```
 
-**NOTE:** Make sure to supply the correct path - it's meant to be the path to the *EOSIO* source code that you have cloned and built from the official [EOSIO repository](https://github.com/EOSIO/eos). In our case the path is `/~/Workspaces/EOS/eos` but yours will most probably be different:
+**NOTE:** Make sure to supply the correct path - it's meant to be the path to the *EOSIO* source code that you have cloned from the official [EOSIO repository](https://github.com/EOSIO/eos). In our case the path is `/~/Workspaces/EOS/eos` but yours will most probably be different:
 
 ```
 echo 'export EOSIO_SOURCE_DIR=~/Workspaces/EOS/eos' >> ~/.bashrc
 ```
 
-Apply the above change to your bash console:
+Apply the above change to your bash terminal:
 
 ```
 source ~/.bashrc
@@ -60,7 +60,7 @@ echo 'export EOSIO_SOURCE_DIR=/path/to/your/local/EOSIO/repository' >> ~/.bashrc
 echo 'export EOSIO_SOURCE_DIR=/mnt/d/Workspaces/EOS/eos' >> ~/.bashrc
 ```
 
-Apply the above change to your bash console:
+Apply the above change to your bash terminal:
 
 ```
 source ~/.bashrc
