--- a/docs/guides/02.InteractingWithEOSContractsInEOSFactory.md
+++ b/docs/guides/02.InteractingWithEOSContractsInEOSFactory.md
@@ -20,7 +20,7 @@ In you are on Windows, navigate to `Preferences -> Settings` and overwrite the d
 
 ## Run Python CLI in VSC
 
-In *Visual Studio Code*, switch to the bash console and type `python3` to run the Python CLI. The prompt should change to `>>>` signifying that it's ready for Python commands.
+In *Visual Studio Code*, switch to the bash terminal and type `python3` to run the Python CLI. The prompt should change to `>>>` signifying that it's ready for Python commands.
 
 Next, import the *EOSFactory* toolset:
 
@@ -42,7 +42,7 @@ To start your own single-node local testnet:
 node.reset()
 ```
 
-Assuming everything has worked properly, you should see a new console window pop up and a block generation message appearing there every 0.5 seconds:
+Assuming everything has worked properly, you should see a new bash terminal window pop up and a block generation message appearing there every 0.5 seconds:
 
 ```
 eosio generated block 046b9984... #101527 @ 2018-05-01T14:24:58.000 with 0 trxs
@@ -142,15 +142,27 @@ Alternatively, supply just the name of the folder, if it can be found in a stand
 contract = Contract("eosio.token")
 ```
 
+**NOTE:** When a new contract object is initiated several things are happening behind the scenes: a new account is created with a new pair of keys and the contract is assigned to this new account.
+
 ## Deploy the EOS Token Contract
 
-To deploy a smart-contract use its `deploy` method:
+At this stage the contract has no code deployed. You can check it by running its `get_code` method:
+
+```
+contract.get_code()
+```
+
+To deploy the contract use its `deploy` method:
 
 ```
 contract.deploy()
 ```
 
-**NOTE:** During deployment several things are happening behind the scenes: a new account is created with a new pair of keys and the contract is assigned to this new account.
+And now you can verify that the hash of the deployed code is non-zero:
+
+```
+contract.get_code()
+```
 
 ## Create the EOS Token
 
