--- a/docs/guides/04.UnitTestingEOSContractsInEOSFactory.md
+++ b/docs/guides/04.UnitTestingEOSContractsInEOSFactory.md
@@ -70,14 +70,14 @@ if __name__ == "__main__":
     run()
 ```
 
-Assuming your unit-test file is named `test.py`, you can run it from a Python console:
+Assuming your unit-test file is named `test.py`, you can run it in a Python terminal:
 
 ```
 import test
 test.run()
 ```
 
-Or you can do it directly from the bash console:
+Or you can do it directly in a bash terminal:
 
 ```
 python3 ./tests/test.py
