--- a/docs/guides/03.CompilingEOSContractsInEOSFactory.md
+++ b/docs/guides/03.CompilingEOSContractsInEOSFactory.md
@@ -10,7 +10,7 @@ The purpose of this tutorial is to demonstrate how *EOSFactory* and its Python C
 
 ## Set up the Workspace
 
-In *Visual Studio Code*, switch to the bash console and type `python3` to run the Python CLI. The prompt should change to `>>>` signifying that it's ready for Python commands.
+In *Visual Studio Code*, switch to the bash terminal and type `python3` to run the Python CLI. The prompt should change to `>>>` signifying that it's ready for Python commands.
 
 ## Create a Contract Template
 
