--- a/docs/guides/01.InstallingEOSFactory.md
+++ b/docs/guides/01.InstallingEOSFactory.md
@@ -39,10 +39,14 @@ Finally, navigate to the `eosfactory` folder and run the build script:
 
 ```
 cd eosfactory
-sudo ./build.sh
+./build.sh
 ```
 
-**NOTE:** When the build process is finished you'll need to restart your bash terminal.
+**NOTE:** When the build process is finished reload `bashrc`:
+
+```
+source ~/.bashrc
+```
 
 ## Build *EOSFactory* on Windows
 
@@ -86,7 +90,9 @@ setx.exe "HOME" %LocalAppData%\\Packages\\CanonicalGroupLimited.UbuntuonWindows_
 
 **NOTE:** If you are unsure what the path is in your case, open *Windows Explorer* and navigate to the  `%LocalAppData%\Packages` folder and search for `rootfs`.
 
-Restart your bash terminal for the change to take effect and check if the variable `HOME` has been properly set by running this command in the bash terminal:
+**NOTE:** Restart your bash terminal for the change to take effect.
+
+Check if the variable `HOME` has been properly set by running this command in the bash terminal:
 
 ```
 echo $(cmd.exe /c dir %HOME%)
