--- a/docs/guides/01.InstallingEOSFactory.md
+++ b/docs/guides/01.InstallingEOSFactory.md
@@ -42,7 +42,7 @@ cd eosfactory
 ./build.sh
 ```
 
-**NOTE:** When the build process is finished reload `bashrc`:
+**NOTE:** When the build process is finished restart the bash terminal, or alternatively reload `bashrc`:
 
 ```
 source ~/.bashrc
