--- a/docs/guides/03.CompilingEOSContractsInEOSFactory.md
+++ b/docs/guides/03.CompilingEOSContractsInEOSFactory.md
@@ -14,7 +14,19 @@ In *Visual Studio Code*, switch to the bash terminal and type `python3` to run t
 
 ## Create a Contract Template
 
-To create a new contract from a pre-defined template:
+First, start the testnet and initialize the workspace:
+
+```
+import node
+node.reset()
+```
+
+```
+import sess
+sess.init()
+```
+
+To create a new contract from a pre-defined template use the `Template` class:
 
 ```
 from eosf import *
@@ -30,7 +42,11 @@ contract.path()
 You can keep your contracts in any location you want. However, if it's a non-standard location (i.e. different from `eos/build/contracts` or `eosfactory/contracts`) then you'll need to provide the entire path to its folder, e.g.
 
 ```
-contract = Contract("/mnt/d/Workspaces/EOS/eosfactory/contracts/test")
+contract = Template("/mnt/d/Workspaces/EOS/eosfactory/contracts/hello1")
+```
+
+```
+contract = Template("/~/Workspaces/EOS/eosfactory/contracts/hello2")
 ```
 
 ## Add C++ code
@@ -74,18 +90,6 @@ contract.build()
 ```
 
 ## Deploy the Contract
-
-First, start the testnet and initialize the workspace:
-
-```
-import node
-node.reset()
-```
-
-```
-import sess
-sess.init()
-```
 
 Now we can deploy the compiled contract:
 
