--- a/docs/guides/03.CompilingEOSContractsInEOSFactory.md
+++ b/docs/guides/03.CompilingEOSContractsInEOSFactory.md
@@ -46,7 +46,7 @@ contract = Template("/mnt/d/Workspaces/EOS/eosfactory/contracts/hello1")
 ```
 
 ```
-contract = Template("/~/Workspaces/EOS/eosfactory/contracts/hello2")
+contract = Template("~/Workspaces/EOS/eosfactory/contracts/hello2")
 ```
 
 ## Add C++ code
@@ -148,10 +148,7 @@ contract.push_action("hi", '{"user":"carol"}', sess.alice)
 ```
 
 ```
-Error 3030001: missing required authority
-Ensure that you have the related authority inside your transaction!;
-Error Details:
-missing authority of carol
+"error":{"code":3030001,"name":"tx_missing_auth","what":"missing required authority"...
 ```
 
 But if we use the appropriate authority, there should no error:
