--- a/pyteos/docs/source/01.InstallingEOSFactory.md
+++ b/pyteos/docs/source/01.InstallingEOSFactory.md
@@ -45,7 +45,7 @@ cd eosfactory
 ./build.sh
 ```
 
-**NOTE:** When the build process is finished restart the bash terminal, or alternatively reload `bashrc`:
+**NOTE:** When the build process is finished restart the bash terminal or at least reload `bashrc`:
 
 ```
 source ~/.bashrc
@@ -73,25 +73,21 @@ Apply the above change to your bash terminal:
 source ~/.bashrc
 ```
 
-Next, still in the bash terminal run this command to define a Windows user variable pointing to your Ubuntu home directory as seen from the Windows file system perspective:
+Next, still in the bash terminal run this command to define a Windows user variable pointing to your Ubuntu home directory, as seen from the Windows file system perspective:
 
 ```
 setx.exe "HOME" "path\\to\\your\\ubuntu\\home\\directory"
 ```
 
-**NOTE:** Make sure to supply the correct path - most probably it will be similar to this:
-
-```
-%LocalAppData%\\Packages\\CanonicalGroupLimited.UbuntuonWindows_79rhkp1fndgsc\\LocalState\\rootfs\\home\\$USER
-```
-
-If so, the entire command will be this: 
+**NOTE:** Make sure to supply the correct path - most probably it will be similar to the one listed below:
 
 ```
 setx.exe "HOME" %LocalAppData%\\Packages\\CanonicalGroupLimited.UbuntuonWindows_79rhkp1fndgsc\\LocalState\\rootfs\\home\\$USER
 ```
 
-**NOTE:** If you are unsure what the path is in your case, open *Windows Explorer* and navigate to the  `%LocalAppData%\Packages` folder and search for `rootfs`.
+If you are unsure what the path is in your case, open *Windows Explorer* and navigate to the  `%LocalAppData%\Packages` folder and search for `rootfs`.
+
+**NOTE:** Make sure the supplied path ends with your Ubuntu user name.
 
 **NOTE:** Restart your bash terminal for the change to take effect.
 
