--- a/pyteos/docs/source/02.InteractingWithEOSContractsInEOSFactory.md
+++ b/pyteos/docs/source/02.InteractingWithEOSContractsInEOSFactory.md
@@ -205,7 +205,7 @@ contract.get_table("accounts", sess.alice)
 ```
 
 ```
-contract.get_table("accounts", carol)
+contract.get_table("accounts", sess.carol)
 ```
 
 **NOTE:** The `get_table` method takes two arguments: the name of the table as specified by the contract ABI and the scope within the contract in which the table is found.
