--- a/pyteos/docs/source/01.InstallingEOSFactory.md
+++ b/pyteos/docs/source/01.InstallingEOSFactory.md
@@ -20,7 +20,7 @@ git clone https://github.com/tokenika/eosfactory.git
 
 ## Build *EOSFactory* on Linux & OSX
 
-Open the bash terminal and define an environment variable called `EOSIO_SOURCE_DIR`:
+Open a bash terminal and define an environment variable called `EOSIO_SOURCE_DIR`:
 
 ```
 echo 'export EOSIO_SOURCE_DIR=/path/to/your/local/EOSIO/repository' >> ~/.bashrc
@@ -61,7 +61,7 @@ In the bash terminal define an environment variable called `EOSIO_SOURCE_DIR`:
 echo 'export EOSIO_SOURCE_DIR=/path/to/your/local/EOSIO/repository' >> ~/.bashrc
 ```
 
-**NOTE:** Make sure to supply the correct path - it's meant to be the path to the *EOSIO* source code that you have cloned and built from the official [EOSIO repository](https://github.com/EOSIO/eos). In our case the path is `/mnt/d/Workspaces/EOS/eos` but yours will most probably be different:
+**NOTE:** Make sure to supply the correct path - it's meant to be the path to the *EOSIO* source code that you have cloned from the official [EOSIO repository](https://github.com/EOSIO/eos). In our case the path is `/mnt/d/Workspaces/EOS/eos` but yours will most probably be different:
 
 ```
 echo 'export EOSIO_SOURCE_DIR=/mnt/d/Workspaces/EOS/eos' >> ~/.bashrc
