--- a/pyteos/docs/source/04.UnitTestingEOSContractsUsingEOSFactoryInVSC.md
+++ b/pyteos/docs/source/04.UnitTestingEOSContractsUsingEOSFactoryInVSC.md
@@ -1,4 +1,4 @@
-# Unit-testing EOS Contracts in *EOSFactory*
+# Unit-testing EOS Contracts using *EOSFactory* in *Visual Studio Code*
 
 The purpose of this tutorial is to demonstrate how *EOSFactory* and its Python CLI can be used to make unit-testing EOS contracts easy & intuitive.
 
@@ -9,7 +9,9 @@ The purpose of this tutorial is to demonstrate how *EOSFactory* and its Python C
 
 ## Create a unit-test
 
-Create a new Python file containing your unit-test. Here is the recommended structure:
+In *Visual Studio Code* create a new Python file containing your unit-test.
+
+Here is the recommended structure:
 
 ```
 import node
@@ -173,3 +175,6 @@ In our case the output looks like this:
 Test OK
 #  Daemon is stopped.
 ```
+## Further steps
+
+The above example is just a proof-of-concept solution for unit-testing in *EOSFactory*. Ultimately we want to make unit-testing much better organized and integrated more tightly with *Visual Studio Code*.
