--- a/pyteos/docs/source/02.InteractingWithEOSContractsInEOSFactory.md
+++ b/pyteos/docs/source/02.InteractingWithEOSContractsInEOSFactory.md
@@ -6,39 +6,17 @@ The purpose of this tutorial is to demonstrate how *EOSFactory* and its Python C
 
 * This tutorial assumes that you have successfully installed *EOSFactory*. If it's not the case, please refer to [Installing *EOSFactory*](01.InstallingEOSFactory.html).
 * We also assume that you are familiar with the official [EOS tutorials](https://github.com/EOSIO/eos/wiki/Tutorial-Getting-Started-With-Contracts), as they will give you a broader context and explain the rationale behind EOS smart-contracts.
-* Finally, *EOSFactory* works perfectly with [*Visual Studio Code*](https://code.visualstudio.com). To install it, please refer to [this webpage](https://code.visualstudio.com/download).
 
-## Set up *Visual Studio Code* (VSC)
+## Run Python CLI
 
-Start *Visual Studio Code* (VSC) and inside VSC open the `eosfactory` folder.
-
-In you are on Windows, navigate to `Preferences -> Settings` and overwrite the default configuration for the `terminal.integrated.shell.windows` option:
-
-```
-"terminal.integrated.shell.windows": "C:\\Windows\\sysnative\\bash.exe"
-```
-
-## Run Python CLI in VSC
-
-In *Visual Studio Code*, switch to the bash terminal and type `python3` to run the Python CLI. The prompt should change to `>>>` signifying that it's ready for Python commands.
-
-Next, import the *EOSFactory* toolset:
-
-```
-import node
-```
-
-If everything works fine you should see a message like this:
-
-```
-teos exe: /mnt/d/Workspaces/EOS/eosfactory/teos/build/teos
-```
+Open a bash terminal (or if you are on Windows, an Ubuntu bash terminal supplied by *Windows Subsystem for Linux*) and type `python3` to run the Python CLI. The prompt should change to `>>>` signifying that it's ready for Python commands.
 
 ## Start a Local Testnet
 
 To start your own single-node local testnet:
 
 ```
+import node
 node.reset()
 ```
 
@@ -209,3 +187,7 @@ contract.get_table("accounts", sess.carol)
 ```
 
 **NOTE:** The `get_table` method takes two arguments: the name of the table as specified by the contract ABI and the scope within the contract in which the table is found.
+
+## Exit Python CLI
+
+To exit Python CLI use the `exit()` Python command or `ctrl-D`.
