--- a/pyteos/docs/source/03.CompilingEOSContractsUsingEOSFactoryInVSC.md
+++ b/pyteos/docs/source/03.CompilingEOSContractsUsingEOSFactoryInVSC.md
@@ -1,14 +1,25 @@
-# Compiling EOS Contracts in *EOSFactory*
+# Compiling EOS Contracts using *EOSFactory* in *Visual Studio Code*
 
-The purpose of this tutorial is to demonstrate how *EOSFactory* and its Python CLI can be used to make compiling EOS contracts easy & intuitive.
+The purpose of this tutorial is to demonstrate how *EOSFactory* and its Python CLI combined with *Visual Studio Code* can be used to make compiling EOS contracts easy & intuitive. 
 
 ## Prerequisites
 
 * This tutorial assumes that you have successfully installed *EOSFactory*. If it's not the case, please refer to [Installing *EOSFactory*](01.InstallingEOSFactory.html).
 * We also assume that you are familiar with the material covered in [Interacting with EOS Contracts in *EOSFactory*](02.InteractingWithEOSContractsInEOSFactory.html).
+* *EOSFactory* is fully compatible with [*Visual Studio Code*](https://code.visualstudio.com) which is a very convenient tool when working with smart-contract code. To install it, please refer to [this webpage](https://code.visualstudio.com/download).
 * Finally, we assume that you are familiar with the official [EOS Hello World tutorial](https://github.com/EOSIO/eos/wiki/Tutorial-Hello-World-Contract), as it presents the default way to compile and deploy smart-contracts in EOS. What we present here is an alternative.
 
-## Set up the Workspace
+## Set up *Visual Studio Code* (VSC)
+
+Start *Visual Studio Code* (VSC) and inside VSC open the `eosfactory` folder.
+
+In you are on Windows, navigate to `Preferences -> Settings` and overwrite the default configuration for the `terminal.integrated.shell.windows` option:
+
+```
+"terminal.integrated.shell.windows": "C:\\Windows\\sysnative\\bash.exe"
+```
+
+## Run Python CLI in VSC
 
 In *Visual Studio Code*, switch to the bash terminal and type `python3` to run the Python CLI. The prompt should change to `>>>` signifying that it's ready for Python commands.
 
@@ -118,7 +129,7 @@ Re-compile the contract:
 contract.build()
 ```
 
-You might want to reset the testnet (but it's optional):
+The following step is optional, as you can re-deploy the contract on the same testnet. However, if you want to reset the testnet, use these commands:
 
 ```
 node.reset()
