--- a/pyteos/docs/source/02.InteractingWithEOSContractsInEOSFactory.md
+++ b/pyteos/docs/source/02.InteractingWithEOSContractsInEOSFactory.md
@@ -1,4 +1,4 @@
-# Getting Started with EOS Contracts in *EOSFactory* 
+# Interacting with EOS Contracts in *EOSFactory* 
 
 The purpose of this tutorial is to demonstrate how *EOSFactory* and its Python CLI can be used to make interacting with EOS easy & intuitive.
 
