--- a/pyteos/docs/source/02.InteractingWithEOSContractsInEOSFactory.md
+++ b/pyteos/docs/source/02.InteractingWithEOSContractsInEOSFactory.md
@@ -11,7 +11,7 @@ The purpose of this tutorial is to demonstrate how EOSFactory and its Python CLI
 
 Open a bash terminal (or if you are on Windows, an Ubuntu bash terminal supplied by *Windows Subsystem for Linux*) and type `python3` to run the Python CLI. The prompt should change to `>>>` signifying that it's ready for Python commands.
 
-## Start a Local Testnet
+## Start Local Testnet
 
 To start your own single-node local testnet:
 
@@ -32,37 +32,27 @@ To get information about the testnet:
 node.info()
 ```
 
-## Manage the Local Testnet
+## Manage Local Testnet
 
-#### Stop & continue
-
-To stop and then continue running the testnet:
+To stop the current testnet:
 
 ```
 node.stop()
 ```
 
-Wait a bit until the testnet window disappears, and then:
+To continue running the same testnet:
 
 ```
 node.run()
 ```
 
-#### Stop & reset
-
-To stop and reset the testnet:
-
-```
-node.stop()
-```
-
-Wait a bit until the testnet window disappears, and then:
+To stop the current testnet and start a new one:
 
 ```
 node.reset()
 ```
 
-## Initialize the Workspace
+## Initialize Workspace
 
 To initialize the workspace:
 
