--- a/pyteos/docs/source/03.CompilingEOSContractsUsingEOSFactoryInVSC.md
+++ b/pyteos/docs/source/03.CompilingEOSContractsUsingEOSFactoryInVSC.md
@@ -162,7 +162,26 @@ contract.push_action("hi", '{"user":"carol"}', sess.carol)
 
 ## Using *CMake* and *IntelliSense* in *Visual Studio Code*
 
-If you open a specific contract folder (e.g. `tic.tac.toe` ) in *Visual Studio Code*, you'll be able to make use of VSC [IntelliSense](https://code.visualstudio.com/docs/editor/intellisense) feature. Also, you'll be able to compile your contract using *CMake* by choosing the `Run Build Task` option from the VSC menu, or just `Crtl+Shift+B`.
+You can use CMake routines to build a contract, especially if it is developed as a result of a *Template* object. The *Template* produces the *CMakeLists.txt* file in the contract's directory. If you ar in the contract's build directory:
+```
+$ cmake ..
+..................
+..................
+-- Configuring done
+-- Generating done
+-- Build files have been written to: /mnt/c/Workspaces/EOS/eosfactory/contracts/hello/build
+
+$ make
+[ 50%] Generating hello.abi
+#              ABI: ../build/hello.abi
+[ 50%] Built target abi
+Scanning dependencies of target wast
+[100%] Generating hello.wast
+#             WAST: ../build/hello.wast
+[100%] Built target wast
+```
+
+If you open a specific contract folder (e.g. `tic.tac.toe` ) in *Visual Studio Code*, you'll be able to make use of VSC [IntelliSense](https://code.visualstudio.com/docs/editor/intellisense) feature. There you'll be able to compile your contract using a prefabricated *VS code* task macro, by choosing the `Run Build Task` option from the VSC menu, or just `Crtl+Shift+B`.
 
 Here is what the build process output looks like:
 
