--- a/pyteos/docs/source/03.CompilingEOSContractsUsingEOSFactoryInVSC.md
+++ b/pyteos/docs/source/03.CompilingEOSContractsUsingEOSFactoryInVSC.md
@@ -162,7 +162,9 @@ contract.push_action("hi", '{"user":"carol"}', sess.carol)
 
 ## Using *CMake* and *IntelliSense* in *Visual Studio Code*
 
-You can use CMake routines to build a contract, especially if it is developed as a result of a *Template* object. The *Template* produces the *CMakeLists.txt* file in the contract's directory. If you ar in the contract's build directory:
+You can use CMake routines to build a contract if it is developed from a *Template* object as the *Template* produces the *CMakeLists.txt* file in the contract's directory. 
+
+In the contract's build directory:
 ```
 $ cmake ..
 ..................
