timeout extednded, docs finalized

--- a/pyteos/docs/source/03.CompilingEOSContractsUsingEOSFactoryInVSC.md
+++ b/pyteos/docs/source/03.CompilingEOSContractsUsingEOSFactoryInVSC.md
@@ -160,11 +160,23 @@ But if we use the appropriate authority, there should no error:
 contract.push_action("hi", '{"user":"carol"}', sess.carol)
 ```
 
+And finally, when your are done your contract, you might want to delete it from your workspace:
+
+```
+contract.delete()
+```
+
 ## Using *CMake* and *IntelliSense* in *Visual Studio Code*
 
-You can use CMake routines to build a contract if it is developed from a *Template* object as the *Template* produces the *CMakeLists.txt* file in the contract's directory. 
+You can use *CMake* routines to build a contract, provided it has been created in EOSFactory from a template, as described above:
 
-In the contract's build directory:
+```
+from eosf import *
+contract = Template("hello")
+```
+
+The `Template` class produces a `CMakeLists` file in the contract's directory.  Here is an example of the output produced by *CMake* :
+
 ```
 $ cmake ..
 ..................
@@ -183,9 +195,9 @@ Scanning dependencies of target wast
 [100%] Built target wast
 ```
 
-If you open a specific contract folder (e.g. `tic.tac.toe` ) in *Visual Studio Code*, you'll be able to make use of VSC [IntelliSense](https://code.visualstudio.com/docs/editor/intellisense) feature. There you'll be able to compile your contract using a prefabricated *VS code* task macro, by choosing the `Run Build Task` option from the VSC menu, or just `Crtl+Shift+B`.
+This way, if you open a specific contract folder (e.g. `tic.tac.toe` ) in *Visual Studio Code*, you'll be able to compile your contract using a prefabricated VSC task macro, by choosing the `Run Build Task` option from the VSC menu, or just by applying the `Crtl+Shift+B` shortcut.
 
-Here is what the build process output looks like:
+Here is how the output of an automated build process might look like:
 
 ```
 > Executing task: /mnt/d/Workspaces/EOS/eosfactory/teos/build/teos generate abi /mnt/d/Workspaces/EOS/eosfactory/contracts/tic.tac.toe;/mnt/d/Workspaces/EOS/eosfactory/teos/build/teos build contract /mnt/d/Workspaces/EOS/eosfactory/contracts/tic.tac.toe <
@@ -196,3 +208,4 @@ Here is what the build process output looks like:
 Terminal will be reused by tasks, press any key to close it.
 ```
 
+Also, by opening a specific contract folder in VSC you'll be able to make use of VSC [IntelliSense](https://code.visualstudio.com/docs/editor/intellisense) feature.
