--- a/pyteos/docs/source/01.InstallingEOSFactory.md
+++ b/pyteos/docs/source/01.InstallingEOSFactory.md
@@ -1,24 +1,27 @@
 # Installing EOSFactory
 
-The purpose of this tutorial is to demonstrate how to install EOSFactory on any operating system, including Windows, MacOS and Linux.
+The purpose of this tutorial is to demonstrate how to install EOSFactory on any operating system, including Ubuntu, MacOS and Windows.
 
 We've tested EOSFactory on the following platforms:
 
-- Windows 10 (version 1709)
 - Ubuntu 18.04 LTS
 - MacOS 10.13.4
+- Windows 10 (version 1803)
 
-**NOTE:**  EOSFactory is compatible with the latest EOSIO release, i.e. `dawn-v.4.0`.
+**NOTE:**  EOSFactory is compatible with the latest EOSIO release, i.e. `dawn-v4.0.0`.
 
-## Prerequisites
+## Prerequisites for Ubuntu & MacOS
 
-* If you're on Windows, we assume that you have [*Windows Subsystem for Linux*](https://en.wikipedia.org/wiki/Windows_Subsystem_for_Linux) installed. If that's not the case, please refer to [this guide](https://docs.microsoft.com/en-us/windows/wsl/install-win10).
-* We also assume that you have successfully installed *EOSIO* on your machine. If that's not the case, please refer to [this guide](https://github.com/EOSIO/eos/wiki/Local-Environment).
-* And finally we assume you have [Python 3.5](https://www.python.org/download/releases/3.0/) installed (this refers to MacOS and Linux only, as *Windows Subsystem for Linux* ships with Python3 by default).
+* We assume that you have successfully installed *EOSIO* `dawn-v4.0.0` on your machine. If that's not the case, please refer to [this guide](https://github.com/EOSIO/eos/wiki/Local-Environment).
+* We also assume you have [Python 3.5](https://www.python.org/download/releases/3.0/) installed.
 
-**NOTE:** If you are on Windows 10, the only option you have regarding *EOSIO* installation is building it in the Ubuntu bash (supplied by *Windows Subsystem for Linux*), as it cannot be compiled directly on a Windows machine. What we recommend is clone the *EOSIO* source code in Windows, but build it in the Ubuntu bash, taking advantage of the fact that the entire Windows file structure is fully accessible in the Ubuntu bash.
+## Prerequisites for Windows
 
-## Build EOSFactory
+- We assume that you have [*Windows Subsystem for Linux*](https://en.wikipedia.org/wiki/Windows_Subsystem_for_Linux) installed. If that's not the case, please refer to [this guide](https://docs.microsoft.com/en-us/windows/wsl/install-win10).
+- We also assume that you have successfully installed *EOSIO* `dawn-v4.0.0` on your machine. If that's not the case, please refer to [this guide](https://github.com/EOSIO/eos/wiki/Local-Environment). The only option you have regarding *EOSIO* installation is building it in the Ubuntu bash (supplied by *Windows Subsystem for Linux*), as it cannot be compiled directly on a Windows machine. What we recommend is clone the *EOSIO* source code in Windows and keep it in the Windows file structure, but build it in the Ubuntu bash, taking advantage of the fact that the entire Windows file structure is fully accessible in the Ubuntu bash.
+- And finally we assume you have [Python 3.5](https://www.python.org/download/releases/3.0/) in your Ubuntu bash but this condition is most probably already satisfied, as *Windows Subsystem for Linux* ships with Python 3.5 by default.
+
+## Build EOSFactory on Ubuntu
 
 Clone EOSFactory source code from the repository:
 
@@ -26,13 +29,79 @@ Clone EOSFactory source code from the repository:
 git clone https://github.com/tokenika/eosfactory.git
 ```
 
-Open a bash terminal (if you are on Windows use the bash supplied by *Windows Subsystem for Linux*) and navigate to the `eosfactory` folder:
+Open a bash terminal and navigate to the `eosfactory` folder:
 
 ```
 cd eosfactory
 ```
 
-Then run the `build` script:
+Then run the `build` script by pointing it the *EOSIO* source code:
+
+```
+./build.sh -e /path/to/your/local/EOSIO/repository
+```
+
+**NOTE:** Make sure to supply the correct path - it's meant to be the path to the *EOSIO* source code that you have cloned from the official [EOSIO repository](https://github.com/EOSIO/eos). In our case the path is `~/Workspaces/EOS/eos` but yours will most probably be different:
+
+```
+./build.sh -e ~/Workspaces/EOS/eos
+```
+
+And finally load system variables created during installation:
+
+```
+source ~/.bashrc
+```
+
+## Build EOSFactory on MacOS
+
+Clone EOSFactory source code from the repository:
+
+```
+git clone https://github.com/tokenika/eosfactory.git
+```
+
+Open a bash terminal and navigate to the `eosfactory` folder:
+
+```
+cd eosfactory
+```
+
+Then run the `build` script by pointing it the *EOSIO* source code:
+
+```
+./build.sh -e /path/to/your/local/EOSIO/repository
+```
+
+**NOTE:** Make sure to supply the correct path - it's meant to be the path to the *EOSIO* source code that you have cloned from the official [EOSIO repository](https://github.com/EOSIO/eos). In our case the path is `~/Workspaces/EOS/eos` but yours will most probably be different:
+
+```
+./build.sh -e ~/Workspaces/EOS/eos
+```
+
+And finally load system variables created during installation:
+
+```
+source ~/.bash_profile
+```
+
+## Build EOSFactory on Windows
+
+Clone EOSFactory source code from the repository:
+
+```
+git clone https://github.com/tokenika/eosfactory.git
+```
+
+**NOTE:** We recommend cloning EOSFactory in the Windows file structure and building it in the Ubuntu bash supplied by *Windows Subsystem for Linux* (WSL).
+
+Open a WSL bash terminal and navigate to the `eosfactory` folder:
+
+```
+cd /mnt/d/Workspaces/EOS/eosfactory
+```
+
+Then run the `build` script by pointing it the *EOSIO* source code:
 
 ```
 ./build.sh -e /path/to/your/local/EOSIO/repository
@@ -44,43 +113,39 @@ Then run the `build` script:
 ./build.sh -e /mnt/d/Workspaces/EOS/eos
 ```
 
-## Windows Subsystem for Linux
-
-If you are on Windows, we are assuming *Windows Subsystem for Linux* is located in this directory:
+After the build process is finished, make sure your `HOME` user variable as been set properly. The `build` script assumes WSL is located in this directory:
 
 ```
 %LocalAppData%\\Packages\\CanonicalGroupLimited.UbuntuonWindows_79rhkp1fndgsc
 ```
 
-If you have the latest *Windows Subsystem for Linux* release this assumption is valid. However, if your WSL is in a different location, please set your `HOME` user variable manually using this bash command:
+If you have the latest *Windows Subsystem for Linux* release this assumption is most likely valid. However, if your WSL is in a different location, please amend your `HOME` user variable manually using this bash command:
 
 ```
 setx.exe "HOME" %LocalAppData%\\Packages\\CanonicalGroupLimited.UbuntuonWindows_79rhkp1fndgsc\\LocalState\\rootfs\\home\\$USER
 ```
 
-If you are unsure what the path is in your case, open *Windows Explorer* and navigate to the  `%LocalAppData%\\Packages` folder and search for `rootfs`.
+**NOTE:** Replace `CanonicalGroupLimited.UbuntuonWindows_79rhkp1fndgsc` with the appropriate folder name matching your WSL location. If you are unsure what the path is in your case, open *Windows Explorer* and navigate to the  `%LocalAppData%\\Packages` folder and search for `rootfs`.
+
+And finally load system variables created during installation:
+
+```
+source ~/.bashrc
+```
 
 ## Test EOSFactory
 
-In the bash terminal, let's verify that EOSFactory works and is properly hooked up to *EOSIO*.
-
-If you have a new EOSFactory installation and you haven't done so already, reload `bashrc`:
+In the bash terminal, let's verify that EOSFactory works and is properly hooked up to *EOSIO* by running those three tests:
 
 ```
-source ~/.bashrc
-```
-
-Then run this simple unit-test:
-
-```
-source ~/.bashrc
 cd eosfactory
 python3 ./tests/test1.py
+python3 ./tests/test2.py
+python3 ./tests/test3.py
 ```
 
-If everything works, at the end of the test output you should see this label:
+If everything works fine, you should see this label at the end of each test round:
 
 ```
 Test OK
 ```
-
