--- a/pyteos/docs/source/02.InteractingWithEOSContractsInEOSFactory.md
+++ b/pyteos/docs/source/02.InteractingWithEOSContractsInEOSFactory.md
@@ -20,6 +20,8 @@ import node
 node.reset()
 ```
 
+In Ubuntu & MacOS the *EOSIO* process is run in the background with no visible interface. However in Windows it's launched in a separate window.
+
 To get information about the testnet:
 
 ```
@@ -81,7 +83,7 @@ sess.wallet.lock()
 sess.wallet.unlock()
 ```
 
-**NOTE:** You don't need to supply the password, as it's kept for your convenience by Python. Obviously this only makes sense for a development environment.
+**NOTE:** You don't need to supply the password, as it's kept for your convenience by Python. Obviously, this only makes sense in a development environment.
 
 ## Create reference to the EOS Token Contract
 
@@ -150,17 +152,19 @@ contract.push_action("issue", '{"to":"alice", "quantity":"100.0000 EOS", "memo":
 
 ## Transfer EOS Tokens
 
-Now that account `alice` has tokens, we will transfer some to account `carol`.  
+Now that `alice` has tokens, we will transfer some to the `carol` account: 
 
 ```
 contract.push_action("transfer", '{"from":"alice", "to":"carol", "quantity":"25.0000 EOS", "memo":"memo"}', sess.alice)
 ```
 
-**NOTE:** As the third argument we pass the reference to the account `alice` to indicate that she is the one who authorized this action.
+**NOTE:** As the third argument we pass the reference to the `alice` account to indicate that she is the one who authorized this action.
 
 ## Check the Contract Table
 
-From the contract's ABI we know that the table keeping track of the token balances is called `accounts`. Let's check the state of both accounts involved in the previous transaction:
+From the contract's ABI we know that the table keeping track of the token balances is called `accounts`.
+
+Let's check the state of both accounts involved in the previous transaction:
 
 ```
 contract.get_table("accounts", sess.alice)
@@ -174,4 +178,10 @@ contract.get_table("accounts", sess.carol)
 
 ## Exit Python CLI
 
-To exit Python CLI use the `exit()` Python command or `ctrl-D`.
+To exit Python CLI use the `exit` Python command:
+
+```
+exit()
+```
+
+Alternatively, use the `ctrl-D` shortcut.
