--- a/pyteos/docs/source/03.CompilingEOSContractsUsingEOSFactoryInVSC.md
+++ b/pyteos/docs/source/03.CompilingEOSContractsUsingEOSFactoryInVSC.md
@@ -138,7 +138,7 @@ node.reset()
 sess.init()
 ```
 
-And finally, re-deploy the contract:
+And re-deploy the contract:
 
 ```
 contract.deploy()
@@ -165,6 +165,8 @@ And finally, when your are done your contract, you might want to delete it from 
 ```
 contract.delete()
 ```
+
+**NOTE:** The above command removes the entire folder.
 
 ## Using *CMake* and *IntelliSense* in *Visual Studio Code*
 
