--- a/pyteos/docs/source/01.InstallingEOSFactory.md
+++ b/pyteos/docs/source/01.InstallingEOSFactory.md
@@ -17,11 +17,11 @@ We've tested EOSFactory on the following platforms:
 
 ## Prerequisites for Windows
 
-- We assume that you have [*Windows Subsystem for Linux*](https://en.wikipedia.org/wiki/Windows_Subsystem_for_Linux) installed. If that's not the case, please refer to [this guide](https://docs.microsoft.com/en-us/windows/wsl/install-win10).
-- We also assume that you have successfully installed *EOSIO* `dawn-v4.0.0` on your machine. If that's not the case, please refer to [this guide](https://github.com/EOSIO/eos/wiki/Local-Environment). The only option you have regarding *EOSIO* installation is building it in the Ubuntu bash (supplied by *Windows Subsystem for Linux*), as it cannot be compiled directly on a Windows machine. What we recommend is clone the *EOSIO* source code in Windows and keep it in the Windows file structure, but build it in the Ubuntu bash, taking advantage of the fact that the entire Windows file structure is fully accessible in the Ubuntu bash.
-- And finally we assume you have [Python 3.5](https://www.python.org/download/releases/3.0/) in your Ubuntu bash but this condition is most probably already satisfied, as *Windows Subsystem for Linux* ships with Python 3.5 by default.
+- We assume that you have [*Windows Subsystem for Linux*](https://en.wikipedia.org/wiki/Windows_Subsystem_for_Linux) (WSL) installed. If that's not the case, please refer to [this guide](https://docs.microsoft.com/en-us/windows/wsl/install-win10).
+- We also assume that you have successfully installed *EOSIO* `dawn-v4.0.0` on your machine. If that's not the case, please refer to [this guide](https://github.com/EOSIO/eos/wiki/Local-Environment). The only option you have regarding *EOSIO* installation is building it in the Ubuntu bash (supplied by WSL), as it cannot be compiled directly on a Windows machine. What we recommend is clone the *EOSIO* source code in Windows and keep it in the Windows file structure, yet build it in WSL, taking advantage of the fact that the entire Windows file structure is fully accessible in WSL.
+- And finally, we assume you have [Python 3.5](https://www.python.org/download/releases/3.0/) in your WSL, but this condition is likely to be already satisfied, as WSL ships with Python 3.5 by default.
 
-## Build EOSFactory on Ubuntu
+## Build EOSFactory on Ubuntu & MacOS
 
 Clone EOSFactory source code from the repository:
 
@@ -35,51 +35,25 @@ Open a bash terminal and navigate to the `eosfactory` folder:
 cd eosfactory
 ```
 
-Then run the `build` script by pointing it the *EOSIO* source code:
+Then run the `build` script by pointing it to the *EOSIO* source code:
 
 ```
 ./build.sh -e /path/to/your/local/EOSIO/repository
 ```
 
-**NOTE:** Make sure to supply the correct path - it's meant to be the path to the *EOSIO* source code that you have cloned from the official [EOSIO repository](https://github.com/EOSIO/eos). In our case the path is `~/Workspaces/EOS/eos` but yours will most probably be different:
+**NOTE:** Make sure to supply the correct path - it's meant to be the location of the *EOSIO* source code that you have cloned from the official [EOSIO repository](https://github.com/EOSIO/eos). In our case the path is `~/Workspaces/EOS/eo`, but yours will most probably be different:
 
 ```
 ./build.sh -e ~/Workspaces/EOS/eos
 ```
 
-And finally load system variables created during installation:
+And finally, load system variables created during installation:
 
 ```
 source ~/.bashrc
 ```
 
-## Build EOSFactory on MacOS
-
-Clone EOSFactory source code from the repository:
-
-```
-git clone https://github.com/tokenika/eosfactory.git
-```
-
-Open a bash terminal and navigate to the `eosfactory` folder:
-
-```
-cd eosfactory
-```
-
-Then run the `build` script by pointing it the *EOSIO* source code:
-
-```
-./build.sh -e /path/to/your/local/EOSIO/repository
-```
-
-**NOTE:** Make sure to supply the correct path - it's meant to be the path to the *EOSIO* source code that you have cloned from the official [EOSIO repository](https://github.com/EOSIO/eos). In our case the path is `~/Workspaces/EOS/eos` but yours will most probably be different:
-
-```
-./build.sh -e ~/Workspaces/EOS/eos
-```
-
-And finally load system variables created during installation:
+Or if you are on MacOS:
 
 ```
 source ~/.bash_profile
@@ -93,7 +67,7 @@ Clone EOSFactory source code from the repository:
 git clone https://github.com/tokenika/eosfactory.git
 ```
 
-**NOTE:** We recommend cloning EOSFactory in the Windows file structure and building it in the Ubuntu bash supplied by *Windows Subsystem for Linux* (WSL).
+**NOTE:** We recommend cloning EOSFactory in the Windows file structure and building it in WSL.
 
 Open a WSL bash terminal and navigate to the `eosfactory` folder:
 
@@ -101,33 +75,33 @@ Open a WSL bash terminal and navigate to the `eosfactory` folder:
 cd /mnt/d/Workspaces/EOS/eosfactory
 ```
 
-Then run the `build` script by pointing it the *EOSIO* source code:
+Then run the `build` script by pointing it to the *EOSIO* source code:
 
 ```
 ./build.sh -e /path/to/your/local/EOSIO/repository
 ```
 
-**NOTE:** Make sure to supply the correct path - it's meant to be the path to the *EOSIO* source code that you have cloned from the official [EOSIO repository](https://github.com/EOSIO/eos). In our case the path is `/mnt/d/Workspaces/EOS/eos` but yours will most probably be different:
+**NOTE:** Make sure to supply the correct path - it's meant to be the location of the *EOSIO* source code that you have cloned from the official [EOSIO repository](https://github.com/EOSIO/eos). In our case the path is `/mnt/d/Workspaces/EOS/eos`, but yours will most probably be different:
 
 ```
 ./build.sh -e /mnt/d/Workspaces/EOS/eos
 ```
 
-After the build process is finished, make sure your `HOME` user variable as been set properly. The `build` script assumes WSL is located in this directory:
+After the build process is finished, make sure your `HOME` user variable has been set properly. The `build` script assumes that your WSL is located in this directory:
 
 ```
 %LocalAppData%\\Packages\\CanonicalGroupLimited.UbuntuonWindows_79rhkp1fndgsc
 ```
 
-If you have the latest *Windows Subsystem for Linux* release this assumption is most likely valid. However, if your WSL is in a different location, please amend your `HOME` user variable manually using this bash command:
+If you have the latest WSL release, this assumption is most likely valid. However, if for some reasons your WSL is in a different location, please amend your `HOME` user variable manually using this bash command:
 
 ```
 setx.exe "HOME" %LocalAppData%\\Packages\\CanonicalGroupLimited.UbuntuonWindows_79rhkp1fndgsc\\LocalState\\rootfs\\home\\$USER
 ```
 
-**NOTE:** Replace `CanonicalGroupLimited.UbuntuonWindows_79rhkp1fndgsc` with the appropriate folder name matching your WSL location. If you are unsure what the path is in your case, open *Windows Explorer* and navigate to the  `%LocalAppData%\\Packages` folder and search for `rootfs`.
+**NOTE:** Replace `CanonicalGroupLimited.UbuntuonWindows_79rhkp1fndgsc` with the appropriate folder name matching your WSL location. If you are unsure what the path is in your case, open *Windows Explorer*, navigate to the  `%LocalAppData%\\Packages` folder and search for `rootfs`.
 
-And finally load system variables created during installation:
+And finally, load system variables created during installation:
 
 ```
 source ~/.bashrc
@@ -135,16 +109,23 @@ source ~/.bashrc
 
 ## Test EOSFactory
 
-In the bash terminal, let's verify that EOSFactory works and is properly hooked up to *EOSIO* by running those three tests:
+Let's verify that EOSFactory works and is properly hooked up to *EOSIO*.
+
+First, make sure your working directory is switched to `eosfactory`:
 
 ```
 cd eosfactory
+```
+
+And then run those three tests:
+
+```
 python3 ./tests/test1.py
 python3 ./tests/test2.py
 python3 ./tests/test3.py
 ```
 
-If everything works fine, you should see this label at the end of each test round:
+If everything works fine, you should see this message at the end of each test round:
 
 ```
 Test OK
