--- a/pyteos/docs/source/01.InstallingEOSFactory.md
+++ b/pyteos/docs/source/01.InstallingEOSFactory.md
@@ -41,19 +41,19 @@ Then run the `build` script by pointing it to the *EOSIO* source code:
 ./build.sh -e /path/to/your/local/EOSIO/repository
 ```
 
-**NOTE:** Make sure to supply the correct path - it's meant to be the location of the *EOSIO* source code that you have cloned from the official [EOSIO repository](https://github.com/EOSIO/eos). In our case the path is `~/Workspaces/EOS/eo`, but yours will most probably be different:
+**NOTE:** Make sure to supply the correct path - it's meant to be the location of the *EOSIO* source code that you have cloned from the official [EOSIO repository](https://github.com/EOSIO/eos). In our case the path is `~/Workspaces/EOS/eos`, but yours will most probably be different:
 
 ```
 ./build.sh -e ~/Workspaces/EOS/eos
 ```
 
-And finally, load system variables created during installation:
+And finally, load system variables created during installation. The command may differ depending on your system. If you are on Ubuntu use this:
 
 ```
 source ~/.bashrc
 ```
 
-Or if you are on MacOS:
+And if you are on MacOS use this:
 
 ```
 source ~/.bash_profile
@@ -93,7 +93,7 @@ After the build process is finished, make sure your `HOME` user variable has bee
 %LocalAppData%\\Packages\\CanonicalGroupLimited.UbuntuonWindows_79rhkp1fndgsc
 ```
 
-If you have the latest WSL release, this assumption is most likely valid. However, if for some reasons your WSL is in a different location, please amend your `HOME` user variable manually using this bash command:
+If you have the latest WSL release, this assumption is most likely valid. However, if for some reasons your WSL is in a different location, please amend your `HOME` user variable manually by using this command in your WSL bash:
 
 ```
 setx.exe "HOME" %LocalAppData%\\Packages\\CanonicalGroupLimited.UbuntuonWindows_79rhkp1fndgsc\\LocalState\\rootfs\\home\\$USER
