--- a/pyteos/docs/source/02.InteractingWithEOSContractsInEOSFactory.md
+++ b/pyteos/docs/source/02.InteractingWithEOSContractsInEOSFactory.md
@@ -9,7 +9,7 @@ The purpose of this tutorial is to demonstrate how EOSFactory and its Python CLI
 
 ## Run Python CLI
 
-Open a bash terminal (or if you are on Windows, an Ubuntu bash terminal supplied by *Windows Subsystem for Linux*) and type `python3` to run the Python CLI. The prompt should change to `>>>` signifying that it's ready for Python commands.
+Open a bash terminal (or if you are on Windows, open an Ubuntu bash terminal supplied by *Windows Subsystem for Linux*) and type `python3` to run the Python CLI. The prompt should change to `>>>` signifying that it's ready for Python commands.
 
 ## Start Local Testnet
 
@@ -178,7 +178,7 @@ contract.get_table("accounts", sess.carol)
 
 ## Exit Python CLI
 
-To exit Python CLI use the `exit` Python command:
+To exit Python CLI:
 
 ```
 exit()
